syntax="proto3";
package acsys;
import "transaction.proto";
import "account.proto";
import "contact.proto";

service AccountSystem {
    // create new Account
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
    // query account information
    rpc QueryAccount(QueryAccountRequest) returns (QueryAccountResponse) {}
    // process transaction
    rpc TransProcess(TransProcessRequest) returns (TransProcessResponse) {}
    // query transaction information
    rpc TransQuery(TransQueryRequest) returns (TransQueryResponse) {}

    // create new Contact
    rpc CreateContact(CreateContactRequest) returns (CreateContactResponse) {}
    // query contact list
    rpc QueryContact(QueryContactRequest) returns (QueryContactResponse) {}
    // update contact
    rpc UpdateContact(UpdateContactRequest) returns (UpdateContactResponse) {}
    // delete contact
    rpc DeleteContact(DeleteContactRequest) returns (DeleteContactResponse) {}
}