syntax="proto3";
package pb;
import "common.proto";

message BaseEvent {
    string event_id = 1;
    string event_type = 2;
    string aggregate_id = 3;
    string aggregate_type = 4;
    bytes raw_data = 5;
    uint64 version = 6;
    uint64 timestamp = 7;
}

message SaveEventsRequest {
    repeated BaseEvent events = 1;
    uint64 version = 2;
}

message SaveEventsResponse {
    Status status = 1;
}

message LoadEventsRequest {
    string aggregate_id = 1;
}

message LoadEventsResponse {
    repeated BaseEvent events = 1;
    Status status = 2;
}